--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
   <body>
     <h1>Timothy McGuire - MicroCODE, Inc.</h1>
-    <img src="meanme.jpg" />
+    <img src="MeanMe.jpg" />
   </body>
 </html>
