--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <body>
     <h1>Timothy McGuire - MicroCODE, Inc.</h1>
-    <img src="MeanMe.jpg" />
+    <img src="MeanMe.jpg" 
+     width="400" />
   </body>
 </html>
