--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  h1 { font-family: 'Helvetica', sans-seriff; }
   <body>
     <h1>Timothy McGuire - MicroCODE, Inc.</h1>
     <img src="MeanMe.jpg" 
