--- a/index.html
+++ b/index.html
@@ -1,7 +1,67 @@
 <!DOCTYPE html>
 <html>
-  h1 { font-family: 'Helvetica', sans-seriff; }
+  <head>
+    <style>
+        body {
+         font-family: 'Franklin Gothic', 'Arial', Arial, sans-serif;
+         margin: 0mm;
+        }
+        #watermark {
+                    position: fixed;
+                        bottom: 150px;
+                        right: 150px;
+                        opacity: 0.15;
+                        font-size: 220pt;
+                        transform: rotate(-45deg);
+                        text-align: center;
+                        font-weight: bold;
+                        color: gray;
+        }
+        @media screen {
+                @page {
+                        margin: 0mm 0mm 0mm 0mm;
+                        top: 0mm;
+                }
+                body {
+                        background-color: rgb(82, 86, 89);
+                }
+                div.page {
+                        width: 210mm;
+                        height: 297mm;
+                        margin: 0mm auto 5mm auto;
+                        background-color: white;
+                        filter: drop-shadow(2px 4px 6px black);
+                }
+        }
+        h1 {
+                font-size: 13.5pt;
+                line-height: 5.8mm;
+                color: #fff;
+                font-weight: bold;
+                margin: 0;
+                padding: 0;
+        }
+        h2 {
+                font-size: 12.0pt;
+                line-height: 4.5mm;
+                color: #fff;
+                font-weight: normal;
+                margin: 0;
+                padding: 0;
+        }
+        h3 {
+                font-size: 8.0pt;
+                line-height: 3.5mm;
+                color: #fff;
+                font-weight: normal;
+                margin: 0;
+                padding: 0;
+        }      
+    </style>
+  </head>
   <body>
+    <style>
+    </style>
     <h1>Timothy McGuire - MicroCODE, Inc.</h1>
     <img src="MeanMe.jpg" 
      width="2000" />
