--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <title>MIT xPRO MERN Portfolio</title>
     <style>
         body {
          font-family: 'Franklin Gothic', 'Arial', Arial, sans-serif;
@@ -20,7 +21,6 @@
         @media screen {
                 @page {
                         margin: 0mm 0mm 0mm 0mm;
-                        top: 0mm;
                 }
                 body {
                         background-color: rgb(82, 86, 89);
