--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
   </head>
   <body>
     <h1>[  Timothy J McGuire - MicroCODE  ]</h1>
-    <img src="MeanMe.jpg" 
-     width="1000" />
+    <img src="MeanMe.jpg" width="1000"  alt="Mean Me Picture." />
   </body>
 </html>
