Corrected typos and expanded descriptions.

--- a/project-mit-xpro.html
+++ b/project-mit-xpro.html
@@ -520,7 +520,7 @@
                     <div class="d-none d-lg-block col-1 order-lg-2"></div>
                     <div class="col-12 col-lg-5 lead me-xl-0 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="right" data-show-delay="50">
                         <h3>PacMen</h3>
-                        <p>An exercise involving the extension of start code. This also utilized GitHub for project launch (clone MIT starter repo) and GitHub best practices, concerning structure, README, etc. </p>
+                        <p>An exercise involving the extension of starter code. This also utilized GitHub for project launch (clone MIT starter repo) and GitHub best practices, concerning structure, creating a GitHub README.md MarkDown file, etc. </p>
                         <hr>
                         <div class="row gh-1 gv-1">
                             <div class="col-auto col-sm-6">
@@ -549,7 +549,7 @@
                     <div class="d-none d-lg-block col-1 me-xl-10"></div>
                     <div class="col-12 col-lg ms-xl-5 me-xl-n10 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="left" data-show-delay="50">
                         <h3>Eye Exercise</h3>
-                        <p class="mb-0 lead fw-normal">An exercise involving the extension of start code. Continued use of GitHub with an eye toward building this Portfolio was an excellent way to build Git skills. </p>
+                        <p class="mb-0 lead fw-normal">An exercise involving the extension of start code. Continued use of GitHub with an eye toward building this Portfolio, this was an excellent way to build Git/itHub skills. </p>
                         <hr>
                         <div class="row gh-1 gv-1">
                             <div class="col-auto col-sm-6">
@@ -579,7 +579,7 @@
                     <div class="d-none d-lg-block col-1 order-lg-1"></div>
                     <div class="col-12 col-lg-5 order-lg-0 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="right" data-show-delay="250">
                         <h3>Real-Time Bus Tracker</h3>
-                        <p>Map services, Live Data Fetching, Map rendering, panning, and control. An excellent learning experience that turned out to be directly applicable to other work.</p>
+                        <p>Learning the use of Map services, Live Data Fetching, Map rendering, panning, and control. An excellent learning experience that turned out to be directly applicable to other work. This really opened my mind, revealing how Apps like DoorDash, UBER, and the like, actually function.</p>
                         <hr>
                         <div class="row gh-1 gv-1">
                             <div class="col-auto col-sm-6">
