Changed size of Signatures for iPhones

--- a/blog-18-sep-2020.html
+++ b/blog-18-sep-2020.html
@@ -171,7 +171,7 @@
         <header class="navbar navbar-top navbar-expand">
             <div class="container justify-content-between">
                 <a class="navbar-brand" href="index.html">
-                    <img width="368" src="assets/images/me/timothy-mcguire-black.png" alt="">
+                    <img width="294" src="assets/images/me/timothy-mcguire-black.png" alt="">
                 </a>
                 <a class="navbar-toggle" href="#navbar-mobile-style-2" data-fancybox data-base-class="fancybox-navbar" data-keyboard="false" data-auto-focus="false" data-touch="false" data-close-existing="true" data-small-btn="false" data-toolbar="false">
                     <span></span>
@@ -491,8 +491,8 @@
                 <div class="row justify-content-center gh-1 mb-100">
                     <div class="col-lg-8 post-content">
                         <p class="lead fw-medium">After over 30 years with Rockwell Automation Ken Welch retires.</p>
-                        <p>Can and I have worked together on General Motors error proofing systems for almost 24 years. Ken is one of the nicest, hardest working men I know and I'm glad to have had the opportunity to work with him these last two decades. </p>
-                        <p>MicroCODE is extremely happy that Ken is still working part-time and choose to partner with us.</p>
+                        <p>Ken and I have worked together on General Motors error proofing systems for almost 24 years. Ken is one of the nicest, hardest working men I know and I'm glad to have had the opportunity to work with him these last two decades. </p>
+                        <p>MicroCODE is extremely happy that Ken is still working part-time and choose to partner with us after leaving Rockwell Automation.</p>
                     </div>
                 </div>
                 <div class="row gh-1 gv-1 mb-100">
@@ -512,7 +512,7 @@
                         <h3>COSS, GEP, and SEP.</h3>
                         <p>Three different generations of General Motors error proofing, installed in over 30 Plants world-wide. All based on the the original design and code started in December 1998. </p>
                         <h4>Six month project?</h4>
-                        <p>We were initially told that the GM Common Operator Support System (COSS) would be a six month project. But Harry Valdes--a different Rockwell Manager--told us we'd stop working on error-proofing when we walked away from it, he was right. And we still haven't walked away from it yet. </p>
+                        <p>We were initially told that the GM Common Operator Support System (COSS) would be a six month project. But Harry Valdez--a Rockwell Project Manager--told us we'd stop working on error-proofing when we walked away from it, he was right, but we still haven't walked away from it yet! </p>
                     </div>
                 </div>
                 <div class="row gh-1 gv-1 mb-100">
