Corrected text mistakes

--- a/project-app-support.html
+++ b/project-app-support.html
@@ -490,7 +490,7 @@
                     <div class="d-none d-lg-block col-1 me-xl-10"></div>
                     <div class="col-12 col-lg ms-xl-5 me-xl-n10 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="right" data-show-delay="50">
                         <h3>The Circles</h3>
-                        <p class="mb-0 lead fw-normal">Our method of customer support since the 1990s. This is a formal porcess to keep Development, Deployment, Defect Correction, and App Enhancements running constantly. This is now referred to as "DevOps" and "Agile" and "Continous Delivery". </p>
+                        <p class="mb-0 lead fw-normal">Our method of customer support since the 1990s. This is a formal process to keep Development, Deployment, Defect Correction, and App Enhancements running constantly. This is now referred to as "DevOps" and "Agile" and "Continous Delivery". </p>
                         <hr>
                         <div class="row gh-1 gv-1">
                             <div class="col-auto col-sm-6">
@@ -502,7 +502,9 @@
                             <div class="col-auto col-sm-6">
                                 <ul class="list-group list-group-gap borderless">
                                     <li class="list-group-item"><span class="fw-medium me-8">Client:</span><a href="#"> All</a></li>
-                                    <li class="list-group-item"><span class="fw-medium me-8">App:</span> MDS, VS, Git</li>
+                                    <li class="list-group-item"><span class="fw-medium me-8">GitHub:</span>
+                                        <a href="https://github.com/MicroCODEIncorporated/SoftwareSupportProcess.git"><u>MDS Process</u></a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -518,7 +520,7 @@
                     <div class="d-none d-lg-block col-1 order-lg-2"></div>
                     <div class="col-12 col-lg-5 order-lg-0 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="right" data-show-delay="50">
                         <h3>Development Tools</h3>
-                        <p>During VAX/VMS and Alpha AXP years we used our own "MicroCODE Development System" (MDS) built as a shell on top of DEC Code Management (CMS) and Module Management System (MMS). With Windows development we use a internal version of our MDS along with Visual Studio. For Web development we use Git and GitHub and Visual Studio Code.</p>
+                        <p>During VAX/VMS and Alpha AXP years we used our own "MicroCODE Development System" (MDS) built as a shell on top of DEC Code Management (CMS) and Module Management System (MMS). With Windows development we use a internal version of our MDS along with Visual Studio. For Web development we use Git and GitHub and Visual Studio Code with our MDS process translated into 'Git Flow'-like workflow.</p>
                         <hr>
                         <div class="row gh-1 gv-1">
                             <div class="col-auto col-sm-6">
@@ -530,7 +532,9 @@
                             <div class="col-auto col-sm-6">
                                 <ul class="list-group list-group-gap borderless">
                                     <li class="list-group-item"><span class="fw-medium me-8">Windows:</span> VS 2008-2022</li>
-                                    <li class="list-group-item"><span class="fw-medium me-8">Web:</span> Git, GitHub, VS Code</li>
+                                    <li class="list-group-item"><span class="fw-medium me-8">GitHub:</span>
+                                        <a href="https://github.com/MicroCODEIncorporated/SoftwareSupportProcess.git"><u>MDS Process</u></a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -545,7 +549,7 @@
                     <div class="d-none d-lg-block col-1 me-xl-10"></div>
                     <div class="col-12 col-lg ms-xl-5 me-xl-n10 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="left" data-show-delay="50">
                         <h3>Documentation</h3>
-                        <p class="mb-0 lead fw-normal">Both in our source code and in our user documentation we strive for consistency, simplicity, clarity, and readability. Delviered with the software from day one, even for the simplest update or release.</p>
+                        <p class="mb-0 lead fw-normal">Both in our source code and in our user documentation we strive for consistency, simplicity, clarity, and readability. Delivered with the software from day one, even for the simplest update or release.</p>
                         <hr>
                         <div class="row gh-1 gv-1">
                             <div class="col-auto col-sm-6">
@@ -556,8 +560,8 @@
                             </div>
                             <div class="col-auto col-sm-6">
                                 <ul class="list-group list-group-gap borderless">
-                                    <li class="list-group-item"><span class="fw-medium me-8">Client:</span> GM</li>
-                                    <li class="list-group-item"><span class="fw-medium me-8">App:</span> Error Proofing</li>
+                                    <li class="list-group-item"><span class="fw-medium me-8">Client:</span> All</li>
+                                    <li class="list-group-item"><span class="fw-medium me-8">Goal:</span> Quality</li>
                                 </ul>
                             </div>
                         </div>
