Adjusting iPhone Presentation

--- a/project-microcode.html
+++ b/project-microcode.html
@@ -490,6 +490,7 @@
                     h1
                     {
                         /* Override h1 theme style for MicroCODE */
+                        font-size: 48px;
                         font-weight: 900;
                         color: white;
                     }
