--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <!-- #region  SUB-MENU COLLPASE -->
         <!-- #endregion -->
         <!-- #region  MAIN NAVBAR: used on primary page of the site -->
-        <header class="navbar navbar-top navbar-expand-lg navbar-dark navbar-fixed">
+        <header class="navbar navbar-top navbar-expand navbar-dark navbar-fixed">
             <div class="container justify-content-between">
                 <a class="navbar-brand" href="index.html">
                     <img id="navbar-image" width="384" src="assets/images/me/timothy-mcguire-white.png" alt="">
