--- a/project-control-net.html
+++ b/project-control-net.html
@@ -168,7 +168,7 @@
         <!-- #region  SUB-MENU COLLPASE -->
         <!-- #endregion -->
         <!-- #region  MAIN NAVBAR: used on primary page of the site -->
-        <header class="navbar navbar-top navbar-expand">
+        <header id="navbar-header" class="navbar navbar-top navbar-expand">
             <div class="container justify-content-between">
                 <a class="navbar-brand" href="index.html">
                     <img id="navbar-image" width="384" src="assets/images/me/timothy-mcguire-black.png" alt="">
