Default to 3-column for desktop

--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                         </svg>
                     </div>
                     <!-- PORTFOLIO Intro -->
-                    <div id="portfolio-intro" class="two-column-grid">
+                    <div id="portfolio-intro" class="three-column-grid">
                         <div class="grid-item">
                             <!-- blank column over MicroCODE symbol-->
                         </div>
