Hal Watts = PSA

--- a/my-diving.html
+++ b/my-diving.html
@@ -503,7 +503,7 @@
                     <div class="row gv-3 justify-content-center">
                         <div class="col-12 col-lg-7 text-center">
                             <h2 class="h3 mb-30 pb-10 mt-n10 show-on-scroll" data-show-duration="500" data-show-distance="10">Wreck, Cavern, Ice, and Fun</h2>
-                            <p class="mb-0 show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="150">Its rare that I get to dive with my work travels, but when I do I try to make it memorable. I was certified in 1978 in Clearwater Florida by NASDS (no longer in existence). And later got my Dry Suit, Ice Diving, Deep Air, Nitrox and Cavern Diving certifications from IANTD, PADI, and HAL WATTS.</p>
+                            <p class="mb-0 show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="150">Its rare that I get to dive with my work travels, but when I do I try to make it memorable. I was certified in 1978 in Clearwater Florida by NASDS (no longer in existence). And later got my Dry Suit, Ice Diving, Deep Air, Nitrox and Cavern Diving certifications from IANTD, PADI, and PSA (Hal Watts).</p>
                         </div>
                         <div class="col-12 col-lg-10 show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="300">
                             <hr class="mt-0 mb-30">
