Link to Digital Transformation Certificate

--- a/project-mit-xpro.html
+++ b/project-mit-xpro.html
@@ -496,12 +496,14 @@
                             <div class="col-auto col-sm-6">
                                 <ul class="list-group list-group-gap borderless">
                                     <li class="list-group-item"><span class="fw-medium me-8">Date:</span>Jan 30, 2022</li>
-                                    <li class="list-group-item"><span class="fw-medium me-8">Category:</span>Education</li>
+                                    <li class="list-group-item"><span class="fw-medium me-8">Certificate:</span>
+                                        <a href="https://www.credential.net/8a59d5f8-fcce-4bfd-b540-0c7144d3e8ab"><u>MIT PE</u></a>
+                                    </li>
                                 </ul>
                             </div>
                             <div class="col-auto col-sm-6">
                                 <ul class="list-group list-group-gap borderless">
-                                    <li class="list-group-item"><span class="fw-medium me-8">Client:</span>MIT PE DT</li>
+                                    <li class="list-group-item"><span class="fw-medium me-8">Course:</span>PE DT</li>
                                     <li class="list-group-item"><span class="fw-medium me-8">GitHub:</span>
                                         <a href="https://github.com/tjmcode/MITxPRO-BadBankFireHydrant.git"><u>Bad Bank</u></a>
                                     </li>
