Corrected spelling typos

--- a/project-ladders-dec.html
+++ b/project-ladders-dec.html
@@ -518,7 +518,7 @@
                     <div class="d-none d-lg-block col-1 order-lg-2"></div>
                     <div class="col-12 col-lg-5 lead order-lg-0 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="right" data-show-delay="50">
                         <h3>LADDERS® 32-Bit</h3>
-                        <p>The 32-bit upgrade for WRB's PDP-11 system owners, this moved the LADDERS software from single-user PDP-11s to multi-user datacenter servers. This also introduced teh CIMport PDS product, and the LADDERS Batch and Active Compare Report products. This product ran on the VAX/VMS hardware and operating system.</p>
+                        <p>The 32-bit upgrade for WRB's PDP-11 system owners, this moved the LADDERS software from single-user PDP-11s to multi-user datacenter servers. This also introduced the CIMport PDS product, as well as the LADDERS Batch and Active Compare Report products. This product ran on the VAX/VMS hardware and operating system.</p>
                         <hr>
                         <div class="row gh-1 gv-1">
                             <div class="col-auto col-sm-6">
